--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./Scripts/objects/gameobject.js"></script>
     <script src="./Scripts/objects/background.js"></script>
     <script src="./Scripts/objects/player.js"></script>
+    <script src="./Scripts/objects/projectile.js"></script>
     <script src="./Scripts/objects/enemy.js"></script>
 
     <!-- Scene Scripts -->
