--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="./Scripts/objects/player.js"></script>
     <script src="./Scripts/objects/projectile.js"></script>
     <script src="./Scripts/objects/enemy.js"></script>
+    <script src="./Scripts/objects/alien.js"></script>
 
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
