Part 2 [6]: Added temp HUDItem and ColourChamber

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./Scripts/objects/projectile.js"></script>
     <script src="./Scripts/objects/enemy.js"></script>
     <script src="./Scripts/objects/alien.js"></script>
+    <script src="./Scripts/objects/huditem.js"></script>
 
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
