--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>COMP 397 - Web Game Programming</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="./Contents/game.css">
+    <link rel="stylesheet" href="./Assets/fonts/KronaOne-Regular.ttf">
+    <!-- Local Fonts -->
 </head>
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>
+    <footer>TESTING FONT</footer>
+
+
     <!-- Dependencies -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 
@@ -30,6 +35,7 @@
     <script src="./Scripts/objects/enemy.js"></script>
     <script src="./Scripts/objects/alien.js"></script>
     <script src="./Scripts/objects/huditem.js"></script>
+    <script src="./Scripts/objects/menuButton.js"></script>
 
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
