Part 2 [9]: Cleaning up Code, Preparing to Submit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>
-    <footer>TESTING FONT</footer>
+    <footer>Matthew Naruse - 300 549 638 - COMP397 - S2020</footer>
 
 
     <!-- Dependencies -->
@@ -25,8 +25,9 @@
     <script src="./Scripts/objects/game.js"></script>
     <script src="./Scripts/objects/label.js"></script>
     <script src="./Scripts/objects/button.js"></script>
+    <script src="./Scripts/objects/menuButton.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
-
+    
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
     <script src="./Scripts/objects/background.js"></script>
@@ -35,7 +36,6 @@
     <script src="./Scripts/objects/enemy.js"></script>
     <script src="./Scripts/objects/alien.js"></script>
     <script src="./Scripts/objects/huditem.js"></script>
-    <script src="./Scripts/objects/menuButton.js"></script>
 
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
