Part 3 [0]: Updated Assets, Starting Refactoring

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <script src="./Scripts/objects/projectile.js"></script>
     <script src="./Scripts/objects/enemy.js"></script>
     <script src="./Scripts/objects/alien.js"></script>
+    <script src="./Scripts/objects/bomb.js"></script>
     <script src="./Scripts/objects/huditem.js"></script>
+
+    <!-- Level Scripts -->
+    <script src="./Scripts/levels/fleet_generator.js"></script>
 
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
