Part 3 [1] - Laser Sounds, Moved Collision

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <script src="./Scripts/objects/menuButton.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
     
+    <!-- Managers -->
+    <script src="./Scripts/managers/collision_manager.js"></script>
+
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
     <script src="./Scripts/objects/background.js"></script>
