Part 3 [2]: Added Alien Sounds, Moved Controls

--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
     <script src="./Scripts/config/scene.js"></script>
 
     <!-- Object Scripts -->
-    <script src="./Scripts/objects/game.js"></script>
-    <script src="./Scripts/objects/label.js"></script>
-    <script src="./Scripts/objects/button.js"></script>
-    <script src="./Scripts/objects/menuButton.js"></script>
+    <script src="./Scripts/objects/gui/label.js"></script>
+    <script src="./Scripts/objects/gui/button.js"></script>
+    <script src="./Scripts/objects/gui/menuButton.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
     
     <!-- Managers -->
-    <script src="./Scripts/managers/collision_manager.js"></script>
-
+    <script src="./Scripts/managers/collision.js"></script>
+    <script src="./Scripts/managers/playercontrols.js"></script>
+    <script src="./Scripts/managers/game.js"></script>
+    
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
-    <script src="./Scripts/objects/background.js"></script>
-    <script src="./Scripts/objects/player.js"></script>
-    <script src="./Scripts/objects/projectile.js"></script>
-    <script src="./Scripts/objects/enemy.js"></script>
-    <script src="./Scripts/objects/alien.js"></script>
-    <script src="./Scripts/objects/bomb.js"></script>
-    <script src="./Scripts/objects/huditem.js"></script>
+    <script src="./Scripts/objects/gui/background.js"></script>
+    <script src="./Scripts/objects/entities/player.js"></script>
+    <script src="./Scripts/objects/entities/projectile.js"></script>
+    <script src="./Scripts/objects/entities/enemy.js"></script>
+    <script src="./Scripts/objects/entities/alien.js"></script>
+    <script src="./Scripts/objects/entities/bomb.js"></script>
+    <script src="./Scripts/objects/gui/huditem.js"></script>
+    <script src="./Scripts/objects/entities/colourPalette.js"></script>
 
     <!-- Level Scripts -->
     <script src="./Scripts/levels/fleet_generator.js"></script>
