--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="./Scripts/managers/collision.js"></script>
     <script src="./Scripts/managers/playercontrols.js"></script>
     <script src="./Scripts/managers/game.js"></script>
+    <script src="./Scripts/managers/cleanup.js"></script>
+    <script src="./Scripts/managers/level.js"></script>
     
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
@@ -49,6 +51,9 @@
     <!-- Scene Scripts -->
     <script src="./Scripts/scenes/gameover.js"></script>
     <script src="./Scripts/scenes/play.js"></script>
+    <script src="./Scripts/scenes/levelBase.js"></script>
+    <script src="./Scripts/scenes/levelOne.js"></script>
+    <script src="./Scripts/scenes/levelTwo.js"></script>
     <script src="./Scripts/scenes/start.js"></script>
 
     <script src="./Scripts/core/game.js"></script>
