--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="./Scripts/managers/game.js"></script>
     <script src="./Scripts/managers/cleanup.js"></script>
     <script src="./Scripts/managers/level.js"></script>
+    <script src="./Scripts/managers/playershots.js"></script>
     
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
