--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="./Scripts/scenes/levelOne.js"></script>
     <script src="./Scripts/scenes/levelTwo.js"></script>
     <script src="./Scripts/scenes/start.js"></script>
+    <script src="./Scripts/scenes/instructions.js"></script>
 
     <script src="./Scripts/core/game.js"></script>
 </body>
