Part 3 [17]: Start of SecondaryAliens

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="./Scripts/objects/entities/enemy.js"></script>
     <script src="./Scripts/objects/entities/aliens/alien.js"></script>
     <script src="./Scripts/objects/entities/aliens/alienPrimary.js"></script>
+    <script src="./Scripts/objects/entities/aliens/alienSecondary.js"></script>
     <script src="./Scripts/objects/entities/bomb.js"></script>
     <script src="./Scripts/objects/gui/huditem.js"></script>
     <script src="./Scripts/objects/entities/colourPalette.js"></script>
