--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>COMP 397 - Web Game Programming</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="./Contents/game.css">
-    <link rel="stylesheet" href="./Assets/fonts/KronaOne-Regular.ttf">
+    <link rel="shortcut icon" href="#" /> <!-- Added becuase of annoying error in console -->
+
     <!-- Local Fonts -->
 </head>
 <body>
