--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>
-    <footer>Matthew Naruse - 300 549 638 - COMP397 - S2020</footer>
+    <footer>
+        <h2>Alpha Build - Loading Takes a Few Moments</h2>
+        <h3>Matthew Naruse - 300 549 638 - COMP397 - S2020</h3>
+    </footer>
 
 
     <!-- Dependencies -->
