Part 3 [24]: Added github Pages link Redux

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="shortcut icon" href="#" /> <!-- Added becuase of annoying error in console -->
 </head>
 <body>
-    <canvas id="canvas" width="1280" height="720"></canvas>
-    <footer>Matthew Naruse - 300 549 638 - COMP397 - S2020</footer>
+    <canvas id="canvas" width="1280" height="720"></canvas>    
+    <footer>
+        <h2>Alpha Build - Loading Takes a Few Moments</h2>
+        <h3>Matthew Naruse - 300 549 638 - COMP397 - S2020</h3>
+    </footer>
 
 
     <!-- Dependencies -->
