Part 4 [7]: Implementing Cutscene/Transitions

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="./Scripts/managers/level.js"></script>
     <script src="./Scripts/managers/playershots.js"></script>
     <script src="./Scripts/managers/alienGenerator.js"></script>
+    <script src="./Scripts/managers/cutsceneManager.js"></script>
     
     <!--Game Objects -->
     <script src="./Scripts/objects/gameobject.js"></script>
@@ -59,6 +60,7 @@
     <script src="./Scripts/scenes/levelOne.js"></script>
     <script src="./Scripts/scenes/levelTwo.js"></script>
     <script src="./Scripts/scenes/gameover.js"></script>
+    <script src="./Scripts/scenes/cutscene.js"></script>
 
     <!-- Core Script -->
     <script src="./Scripts/core/game.js"></script>
