--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="./Scripts/managers/level.js"></script>
     <script src="./Scripts/managers/playershots.js"></script>
     <script src="./Scripts/managers/alienGenerator.js"></script>
+    <script src="./Scripts/managers/alienGenerator2.js"></script>
     <script src="./Scripts/managers/cutsceneManager.js"></script>
     
     <!--Game Objects -->
