Part 4 [15 B]: Fixed Random Animations

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <script src="./Scripts/objects/gui/background.js"></script>
     <script src="./Scripts/objects/gui/huditem.js"></script>
+    <script src="./Scripts/objects/gui/staticDisplayItem.js"></script>
     
     <script src="./Scripts/objects/entities/player.js"></script>
     <script src="./Scripts/objects/entities/projectile.js"></script>
