Part 4 [17]: Pre-Submission Ready

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>    
     <footer>
-        <h2>Beta Build (ACTIVE DEVELOPMENT) - Loading Takes a Few Moments</h2>
+        <h2>Beta Build - Loading Takes a Few Moments</h2>
         <h3>Matthew Naruse - 300 549 638 - COMP397 - S2020</h3>
     </footer>
 
